--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -6,17 +6,17 @@
     android:layout_height="match_parent"
     android:layoutDirection="rtl">
 
-<!--    <TextView-->
-<!--        android:id="@+id/btn_test"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentTop="true"-->
-<!--        android:layout_alignParentEnd="true"-->
-<!--        android:layout_margin="@dimen/eight_dp"-->
-<!--        android:text="testBtn"-->
-<!--        android:padding="12dp"-->
-<!--        android:background="@color/colorPrimary"-->
-<!--        android:textColor="@color/white"/>-->
+    <TextView
+        android:id="@+id/btn_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/eight_dp"
+        android:text="testBtn"
+        android:padding="12dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/white"/>
 
 
     <LinearLayout
